--- a/index.html
+++ b/index.html
@@ -7,100 +7,103 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <nav class="row">
-      <h1>Conheça Picinguaba</h1>
-      <ul class="row">
-        <li><a href="#sobre">Sobre o Lugar</a></li>
-        <li><a href="#como-chegar">Como chegar</a></li>
-        <li><a href="#galeria">Galeria</a></li>
-        <li><a href="#contato">Contato </a></li>
-      </ul>
-    </nav>
-    <section id="sobre" class="row">
-      <img
-        src="./assets/Picinguaba.jfif"
-        alt="Vista aérea de uma praia com rochas dispersas, vegetação exuberante, alguns barcos em águas turquesa e um pequeno vilarejo litorâneo com casas e carros estacionados à beira-mar."
-      />
-      <div>
-        <h2>Sobre Picinguaba</h2>
+    <main>
+      <nav class="row">
+        <h1>Conheça Picinguaba</h1>
+        <ul class="row">
+          <li><a href="#sobre">Sobre o Lugar</a></li>
+          <li><a href="#como-chegar">Como chegar</a></li>
+          <li><a href="#galeria">Galeria</a></li>
+          <li><a href="#contato">Contato </a></li>
+        </ul>
+      </nav>
+      <section id="sobre" class="row">
+        <img
+          src="./assets/Picinguaba.jpg"
+          alt="Vista aérea de uma praia com rochas dispersas, vegetação exuberante, alguns barcos em águas turquesa e um pequeno vilarejo litorâneo com casas e carros estacionados à beira-mar."
+        />
+        <div>
+          <h2>Sobre Picinguaba</h2>
+          <p>
+            Picinguaba: Um Paraíso no Litoral Norte de São Paulo Localizada no
+            coração do Litoral Norte paulista, entre Ubatuba e Paraty,
+            Picinguaba é um refúgio de beleza selvagem e tranquilidade. Parte do
+            Parque Estadual da Serra do Mar, a vila preserva praias intocadas,
+            como a Praia da Fazenda e a Brava da Almada, cercadas por Mata
+            Atlântica e águas cristalinas. Seu charme rústico, com casinhas
+            coloridas e ruas de pedra, atrai quem busca conexão com a natureza e
+            cultura caiçara. A gastronomia local, com frutos do mar frescos,
+            completa a experiência. Ideal para ecoturismo, trilhas e mergulho,
+            Picinguaba é um tesouro escondido, perfeito para fugir do agito e
+            curtir o melhor da costa paulista.
+          </p>
+        </div>
+      </section>
+      <section id="como-chegar" class="col">
+        <h2>Como chegar em Picinguaba?</h2>
         <p>
-          Picinguaba: Um Paraíso no Litoral Norte de São Paulo Localizada no
-          coração do Litoral Norte paulista, entre Ubatuba e Paraty, Picinguaba
-          é um refúgio de beleza selvagem e tranquilidade. Parte do Parque
-          Estadual da Serra do Mar, a vila preserva praias intocadas, como a
-          Praia da Fazenda e a Brava da Almada, cercadas por Mata Atlântica e
-          águas cristalinas. Seu charme rústico, com casinhas coloridas e ruas
-          de pedra, atrai quem busca conexão com a natureza e cultura caiçara. A
-          gastronomia local, com frutos do mar frescos, completa a experiência.
-          Ideal para ecoturismo, trilhas e mergulho, Picinguaba é um tesouro
-          escondido, perfeito para fugir do agito e curtir o melhor da costa
-          paulista.
+          Picinguaba fica no Litoral Norte de São Paulo, entre Ubatuba e Paraty
         </p>
-      </div>
-    </section>
-    <section id="como-chegar" class="col">
-      <h2>Como chegar em Picinguaba?</h2>
-      <p>
-        Picinguaba fica no Litoral Norte de São Paulo, entre Ubatuba e Paraty
-      </p>
-      <ul class="col">
-        <li>
-          De carro (a partir de SP): Pegue a Rodovia Presidente Dutra (BR-116)
-          até Taubaté, depois a SP-125 até Ubatuba. Em seguida, siga pela BR-101
-          sentido Paraty. Picinguaba fica a cerca de 30 km do centro de Ubatuba.
-        </li>
-        <li>
-          Ônibus: A empresa Litorânea tem linhas de SP (Rodoviária Tietê) até
-          Ubatuba. De lá, pegue um táxi ou van local até Picinguaba (não há
-          ônibus diretos frequentes).
-        </li>
-        <li>
-          (RJ). Acesso pela Rodovia BR-101 (Rio-Santos): Vindo do RJ: Siga a
-          BR-101 (Rio-Santos) sentido Ubatuba. Picinguaba fica cerca de 1h30
-          após Paraty. Dica: A estrada é sinuosa, mas bem sinalizada.
-          Combustível e caixa eletrônico são escassos na região – abasteça
-          antes!
-        </li>
-      </ul>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7324.619871202017!2d-44.84229816136324!3d-23.377002417520696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9d44a2d6fb8771%3A0xcac3359624e120fc!2sPicinguaba%2C%20Ubatuba%20-%20State%20of%20S%C3%A3o%20Paulo%2C%2011680-000!5e0!3m2!1sen!2sbr!4v1744246571248!5m2!1sen!2sbr"
-        width="600"
-        height="450"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
-      <a
-        href="https://www.google.com/maps/place/Picinguaba,+Ubatuba+-+State+of+S%C3%A3o+Paulo,+11680-000/@-23.3770024,-44.8422982,16z/data=!3m1!4b1!4m6!3m5!1s0x9d44a2d6fb8771:0xcac3359624e120fc!8m2!3d-23.3775611!4d-44.8380223!16s%2Fg%2F1ymxnhmfv"
-        >Link para o mapa</a
-      >
-    </section>
-    <section id="galeria" class="row">
-      <h2>Galeria</h2>
-      <a href="">
-        <img
-          src="./assets/Picinguaba2.jfif"
-          alt="Vilarejo costeiro com praia de areia, águas turquesas cristalinas, barcos e uma densa floresta verde ao fundo."
-          width="300"
-        />
-      </a>
-      <a href="">
-        <img
-          src="./assets/Picinguaba3.jpg"
-          alt="Cena vibrante de uma praia com barcos ancorados na água e casas encantadoras situadas ao longo da orla arenosa."
-          width="300"
-        />
-      </a>
-    </section>
-    <section id="contato" class="col">
-      <p>
-        Para saber mais, visite
-        <a href="https://www.instagram.com/picinguaba.a.vila/">
-          nosso perfil no Instagram
+        <ul class="col">
+          <li>
+            De carro (a partir de SP): Pegue a Rodovia Presidente Dutra (BR-116)
+            até Taubaté, depois a SP-125 até Ubatuba. Em seguida, siga pela
+            BR-101 sentido Paraty. Picinguaba fica a cerca de 30 km do centro de
+            Ubatuba.
+          </li>
+          <li>
+            Ônibus: A empresa Litorânea tem linhas de SP (Rodoviária Tietê) até
+            Ubatuba. De lá, pegue um táxi ou van local até Picinguaba (não há
+            ônibus diretos frequentes).
+          </li>
+          <li>
+            (RJ). Acesso pela Rodovia BR-101 (Rio-Santos): Vindo do RJ: Siga a
+            BR-101 (Rio-Santos) sentido Ubatuba. Picinguaba fica cerca de 1h30
+            após Paraty. Dica: A estrada é sinuosa, mas bem sinalizada.
+            Combustível e caixa eletrônico são escassos na região – abasteça
+            antes!
+          </li>
+        </ul>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7324.619871202017!2d-44.84229816136324!3d-23.377002417520696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9d44a2d6fb8771%3A0xcac3359624e120fc!2sPicinguaba%2C%20Ubatuba%20-%20State%20of%20S%C3%A3o%20Paulo%2C%2011680-000!5e0!3m2!1sen!2sbr!4v1744246571248!5m2!1sen!2sbr"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+        <a
+          href="https://www.google.com/maps/place/Picinguaba,+Ubatuba+-+State+of+S%C3%A3o+Paulo,+11680-000/@-23.3770024,-44.8422982,16z/data=!3m1!4b1!4m6!3m5!1s0x9d44a2d6fb8771:0xcac3359624e120fc!8m2!3d-23.3775611!4d-44.8380223!16s%2Fg%2F1ymxnhmfv"
+          >Link para o mapa</a
+        >
+      </section>
+      <section id="galeria" class="row">
+        <h2>Galeria</h2>
+        <a href="./preview.html#preview-1" aria-label="Visualizar imagem">
+          <img
+            src="./assets/Picinguaba2.jfif"
+            alt="Vilarejo costeiro com praia de areia, águas turquesas cristalinas, barcos e uma densa floresta verde ao fundo."
+            width="300"
+          />
         </a>
-      </p>
-    </section>
-    <a href="#" class="btn">Voltar ao topo</a>
+        <a href="./preview.html#preview-2" aria-label="Visualizar imagem">
+          <img
+            src="./assets/Picinguaba3.jpg"
+            alt="Cena vibrante de uma praia com barcos ancorados na água e casas encantadoras situadas ao longo da orla arenosa."
+            width="300"
+          />
+        </a>
+      </section>
+      <section id="contato" class="col">
+        <p>
+          Para saber mais, visite
+          <a href="https://www.instagram.com/picinguaba.a.vila/">
+            nosso perfil no Instagram
+          </a>
+        </p>
+      </section>
+      <a href="#" class="btn" target="_blank">Voltar ao topo</a>
+    </main>
   </body>
 </html>
